fixed left align issue its ready to go

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ h4 {
     margin: 0 auto;
     position: relative;
     min-height: 821px;
-    left: -50px;
+    left: -17px;
     opacity: 1;
     
     transition: opacity 1s ease-in-out;
